Fix for clipping text in sidebar.

--- a/src/documents/css/docs-template.css.styl
+++ b/src/documents/css/docs-template.css.styl
@@ -379,12 +379,15 @@ html body {
     background: toc-background;
     border-right: 0.2rem solid toc-border-color;
     transition: width transitionTime;
+    flex-grow: 2;
+    -webkit-flex-grow: 2;
 
     // hide the TOC initially
-    overflow: hidden;
+    /*overflow: hidden;
     padding-right: 0;
     padding-left: 0;
-    width: 1px;
+    width: 1px;*/
+
 }
 
 .docs-core-sidebar-visibility .docs-template-TOC-container {
